Prevent mobile button being visible after switching back to desktop

--- a/wcfsetup/install/files/style/layout/containerList.scss
+++ b/wcfsetup/install/files/style/layout/containerList.scss
@@ -93,6 +93,10 @@
 			top: 18px;
 			transition: opacity .12s;
 			
+			> .dropdownLabel {
+				display: none;
+			}
+			
 			> ul {
 				background-color: $wcfContentBackground;
 				border: 1px solid rgba(0, 0, 0, .15);
